Changing names of many fields, adding testPassed to AEAD, fixing typos

--- a/src/ascon/sections/05-ascon-aead128-capabilities.adoc
+++ b/src/ascon/sections/05-ascon-aead128-capabilities.adoc
@@ -13,9 +13,9 @@ Each Ascon AEAD128 algorithm capability advertised is a self-contained JSON obje
 | mode | The Ascon mode to be validated | string | "AEAD128"
 | revision | The algorithm testing revision to use | string | "SP800-232"
 | directions | The directions for AEAD to be tested | array of strings | "encrypt", "decrypt"
-| payloadLength | The supported plaintext lengths in bits | Domain | {"Min": 0, "Max": 65536, "Inc": any}
-| adLength | The supported associated data lengths in bits | Domain | {"Min": 0, "Max": 65536, "Inc": any}
-| tagLength | The supported tag lengths in bits | Domain | {"Min": 64, "Max": 128, "Inc": any}
+| payloadLen | The supported plaintext lengths in bits | Domain | {"Min": 0, "Max": 65536, "Inc": any}
+| adLen | The supported associated data lengths in bits | Domain | {"Min": 0, "Max": 65536, "Inc": any}
+| tagLen | The supported tag lengths in bits | Domain | {"Min": 64, "Max": 128, "Inc": any}
 | supportsNonceMasking | The support for nonce masking (second key) mode | array of booleans | true, false
 |===
 
@@ -34,21 +34,21 @@ Below is an example of the registration for Ascon / AEAD128 / SP800-232
     "encrypt",
     "decrypt"
   ],
-  "payloadLength": [
+  "payloadLen": [
     {
       "min": 0,
       "max": 65536,
       "increment": 1
     }
   ],
-  "adLength": [
+  "adLen": [
     {
       "min": 0,
       "max": 65536,
       "increment": 1
     }
   ],
-  "tagLength": [
+  "tagLen": [
     {
       "min": 64,
       "max": 128,
