--- a/src/ascon/sections/06-ascon-cxof128-test-vectors.adoc
+++ b/src/ascon/sections/06-ascon-cxof128-test-vectors.adoc
@@ -29,11 +29,11 @@ Each test group contains an array of one or more test cases. Each test case is a
 | JSON Value | Description | JSON type
 
 | tcId | Numeric identifier for the test case, unique across the entire vector set | integer
-| message | Message value | hex
-| messageBitLength | Length of message in bits | integer
-| digestBitLength | Length of the digest in bits | integer
-| customizationString | Customization string value | hex
-| customizationStringBitLength | Length of the customization string in bits | integer
+| msg | Message value | hex
+| len | Length of message in bits | integer
+| outLen | Length of the digest in bits | integer
+| cs | Customization string value | hex
+| csLen | Length of the customization string in bits | integer
 |===
 
 The following is an example JSON object sent from the server to the client for Ascon / CXOF128 / FIPS205. 
@@ -57,11 +57,11 @@ The following is an example JSON object sent from the server to the client for A
                 "tests": [
                     {
                     "tcId": 3,
-                    "message": "380F97464AB9E035024C9B5F8D1AF3D0763BE9A7FB795B0FAE6EF5455249E93A4807D046F9BA97916E7EF9639483F4308BC8CAD3E385AEBEB38797DBC49BE2B9636017854AACD7BCA458397D80F87A2B7AC4B98A7E1657C25811937222BBCDD39B3F00346C6EE6DFF10E2F8A4C313E3A",
-                    "messageBitLength": 895,
-                    "digestBitLength": 26524,
-                    "customizationString": "0C6C61FFE1573A4D09542C",
-                    "customizationStringBitLength": 88
+                    "msg": "380F97464AB9E035024C9B5F8D1AF3D0763BE9A7FB795B0FAE6EF5455249E93A4807D046F9BA97916E7EF9639483F4308BC8CAD3E385AEBEB38797DBC49BE2B9636017854AACD7BCA458397D80F87A2B7AC4B98A7E1657C25811937222BBCDD39B3F00346C6EE6DFF10E2F8A4C313E3A",
+                    "len": 895,
+                    "outLen": 26524,
+                    "cs": "0C6C61FFE1573A4D09542C",
+                    "csLen": 88
                     }
                 ]
             }
