--- a/src/ascon/sections/06-ascon-hash256-test-vectors.adoc
+++ b/src/ascon/sections/06-ascon-hash256-test-vectors.adoc
@@ -29,8 +29,8 @@ Each test group contains an array of one or more test cases. Each test case is a
 | JSON Value | Description | JSON type
 
 | tcId | Numeric identifier for the test case, unique across the entire vector set | integer
-| message | Message value | hex
-| messageBitLength | Length of message in bits | integer
+| msg | Message value | hex
+| len | Length of message in bits | integer
 |===
 
 The following is an example JSON object sent from the server to the client for Ascon / Hash256 / FIPS205. 
@@ -53,9 +53,9 @@ The following is an example JSON object sent from the server to the client for A
                 "testType": "AFT",
                 "tests": [
                     {
-                    "tcId": 3,
-                    "message": "937E8B3C4BC1D5E04E7F3157D9C3936CBCBD952D",
-                    "messageBitLength": 159
+                        "tcId": 3,
+                        "msg": "937E8B3C4BC1D5E04E7F3157D9C3936CBCBD952D",
+                        "len": 159
                     }
                 ]
             }
