--- a/src/ascon/sections/06-ascon-xof128-test-vectors.adoc
+++ b/src/ascon/sections/06-ascon-xof128-test-vectors.adoc
@@ -29,9 +29,9 @@ Each test group contains an array of one or more test cases. Each test case is a
 | JSON Value | Description | JSON type
 
 | tcId | Numeric identifier for the test case, unique across the entire vector set | integer
-| message | Message value | hex
-| messageBitLength | Length of message in bits | integer
-| digestBitLength | Length of the digest in bits | integer
+| msg | Message value | hex
+| len | Length of message in bits | integer
+| outLen | Length of the digest in bits | integer
 |===
 
 The following is an example JSON object sent from the server to the client for Ascon / XOF128 / FIPS205. 
@@ -54,10 +54,10 @@ The following is an example JSON object sent from the server to the client for A
                 "testType": "AFT",
                 "tests": [
                     {
-                    "tcId": 3,
-                    "message": "F00C735A4CFAFE35",
-                    "messageBitLength": 63,
-                    "digestBitLength": 949
+                        "tcId": 3,
+                        "msg": "F00C735A4CFAFE35",
+                        "len": 63,
+                        "outLen": 949
                     }
                 ]
             }
