--- a/src/ascon/sections/07-ascon-aead128-responses.adoc
+++ b/src/ascon/sections/07-ascon-aead128-responses.adoc
@@ -9,8 +9,9 @@ Each test group contains an array of one or more test cases. Each test case is a
 | JSON Value | Description | JSON type
 
 | tcId | The test case identifier | integer
-| tag | The computed tag in an encrypt directtion | hex
+| tag | The computed tag in an encrypt case | hex
 | ct | The computed ciphertext in an encrypt case| hex
+| testPassed | Boolean to indicate if a test case should have failed an authentication check in the decrypt case | boolean
 | pt | The computed plaintext in a decrypt case | hex
 |===
 
@@ -54,7 +55,12 @@ The following is an example JSON test vector response object for Ascon / AEAD128
                 "tests": [
                     {
                         "tcId": 124,
+                        "testPassed": true,
                         "pt": "66348919F866C983AAE911B3F556524216672E6A"
+                    },
+                    {
+                        "tcId": 125,
+                        "testPassed": false
                     },
                 ]
             },
@@ -63,7 +69,12 @@ The following is an example JSON test vector response object for Ascon / AEAD128
                 "tests": [
                     {
                         "tcId": 191,
+                        "testPassed": true,
                         "pt": "9ED0960B1BFDDA16"
+                    },
+                    {
+                        "tcId": 192,
+                        "testPassed": false
                     },
                 ]
             },
