--- a/src/ascon/sections/07-ascon-xof128-responses.adoc
+++ b/src/ascon/sections/07-ascon-xof128-responses.adoc
@@ -9,7 +9,7 @@ Each test group contains an array of one or more test cases. Each test case is a
 | JSON Value | Description | JSON type
 
 | tcId | The test case identifier | integer
-| digest | The computed digest | hex
+| md | The computed digest | hex
 |===
 
 The following is an example JSON test vector response object for Ascon / XOF128 / SP800-232.
@@ -32,7 +32,7 @@ The following is an example JSON test vector response object for Ascon / XOF128 
                 "tests": [
                     {
                         "tcId": 1,
-                        "digest": "1C6B4531D31C9ECF60C7A0994A2EAF884F39FB052C8B0820ED8336945874DCB29EE85E5ADBA645724056715DB76B8B08E45546DACEE5CCB0CCA3C377B114C0C23C5207BBFEC6A7DC4F705550C795F381086CCD1DC2AC1B9FDF24AEA246BC6BEF6BD0B2490EC13528843C5BAE22AB556D881FEFFB20B317"
+                        "md": "1C6B4531D31C9ECF60C7A0994A2EAF884F39FB052C8B0820ED8336945874DCB29EE85E5ADBA645724056715DB76B8B08E45546DACEE5CCB0CCA3C377B114C0C23C5207BBFEC6A7DC4F705550C795F381086CCD1DC2AC1B9FDF24AEA246BC6BEF6BD0B2490EC13528843C5BAE22AB556D881FEFFB20B317"
                     }
                 ]
             }
