--- a/src/ascon/sections/06-ascon-aead128-test-vectors.adoc
+++ b/src/ascon/sections/06-ascon-aead128-test-vectors.adoc
@@ -15,9 +15,9 @@ The test group for Ascon / AEAD128 / SP800-232 is as follows:
 
 | tgId | Numeric identifier for the test group, unique across the entire vector set | integer
 | testType | The test operation performed | string
-| tests | Array of individual test vector JSON objects, which are defined in <<Ascon_AEAD128_tvjs>> | array
 | direction | The direction the block cipher operates in | string
 | supportsNonceMasking | Boolean to determine if test group uses a second key for nonce masking | boolean
+| tests | Array of individual test vector JSON objects, which are defined in <<Ascon_AEAD128_tvjs>> | array
 |===
 
 [[Ascon_AEAD128_tvjs]]
@@ -33,12 +33,13 @@ Each test group contains an array of one or more test cases. Each test case is a
 | tcId | Numeric identifier for the test case, unique across the entire vector set | integer
 | key | Key value | hex
 | nonce | Nonce value | hex
-| ad | Associated data value | hex
+| aad | Associated data value | hex
+| tag | Tag in the decrypt case | hex
 | pt | Payload in the encrypt case | hex
 | ct | Payload in the decrypt case | hex
-| payloadBitLength | Payload bit length | integer
-| adBitLength | Assoicated data bit length | integer
-| tagLength | Tag bit length | integer
+| payloadLen | Payload bit length | integer
+| aadLen | Assoicated data bit length | integer
+| tagLen | Tag bit length | integer
 | secondKey | Second key value | hex
 |===
 
@@ -60,78 +61,78 @@ The following is an example JSON object sent from the server to the client for A
             {
                 "tgId": 1,
                 "testType": "AFT",
+                "direction": "encrypt",
+                "supportsNonceMasking": true,
                 "tests": [
                     {
                         "tcId": 60,
                         "key": "FD49918ED109AF4237047633E899B574",
                         "nonce": "B6B6598FFA6317E896945E69FBC05591",
-                        "ad": "47E62206F92A652B",
+                        "aad": "47E62206F92A652B",
                         "pt": "F2C255",
-                        "payloadBitLength": 23,
-                        "adBitLength": 64,
-                        "tagLength": 64,
+                        "payloadLen": 23,
+                        "aadLen": 64,
+                        "tagLeng": 64,
                         "secondKey": "016FBC19B1FAF20FBC6C051B6B8543A7"
                     }
                 ]
-                "direction": "encrypt",
-                "supportsNonceMasking": true
             },
             {
                 "tgId": 2,
                 "testType": "AFT",
+                "direction": "encrypt",
+                "supportsNonceMasking": false,
                 "tests": [
                     {
                         "tcId": 107,
                         "key": "66D31B340B8B4D8C82CDF4C1B76DC4A6",
                         "nonce": "51224C04CC0D79B992826F3478DF6C95",
-                        "ad": "63BEEE9E4B971FEFABEAEBBADBF512194EB04E0E",
+                        "aad": "63BEEE9E4B971FEFABEAEBBADBF512194EB04E0E",
                         "pt": "9596D2",
-                        "payloadBitLength": 24,
-                        "adBitLength": 160,
-                        "tagLength": 64
+                        "payloadLen": 24,
+                        "aadLen": 160,
+                        "tagLen": 64
                     }
                 ]
-                "direction": "encrypt",
-                "supportsNonceMasking": false
             },
             {
                 "tgId": 3,
                 "testType": "AFT",
+                "direction": "decrypt",
+                "supportsNonceMasking": true
                 "tests": [
                     {
                         "tcId": 125,
                         "key": "F381BF2A2CCC344C07E30DB6D93C43A5",
                         "nonce": "538AB0C0748FA21B4841329C640E5B8C",
-                        "ad": "6421B70D86E8CA3D80C0708F72C840717BAB0D4900",
+                        "aad": "6421B70D86E8CA3D80C0708F72C840717BAB0D4900",
                         "tag": "EB8DDC8F7B32334D",
-                        "payloadBitLength": 63,
-                        "adBitLength": 161,
-                        "tagLength": 64,
+                        "payloadLen": 63,
+                        "aadLen": 161,
+                        "tagLen": 64,
                         "secondKey": "89ADE7BE07136C740708C8F10CF58970",
                         "ct": "EA2649C1EDEA2F4A"
                     }
                 ]
-                "direction": "decrypt",
-                "supportsNonceMasking": true
             },
             {
                 "tgId": 4,
                 "testType": "AFT",
+                "direction": "decrypt",
+                "supportsNonceMasking": false
                 "tests": [
                     {
                         "tcId": 184,
                         "key": "E37C0BB570A0F742C72E0F26C2A72BDD",
                         "nonce": "49F8A80BCCCA888D053F41EE35842A78",
-                        "ad": "55D138A7B7A84454D7217121446BA4AF1050B988",
+                        "aad": "55D138A7B7A84454D7217121446BA4AF1050B988",
                         "tag": "6497C727EC4CBF8F",
-                        "payloadBitLength": 383,
-                        "adBitLength": 160,
-                        "tagLength": 64,
+                        "payloadLen": 383,
+                        "aadLen": 160,
+                        "tagLen": 64,
                         "ct": "C20807710C919109AC1618D872ABCD1D8D2B3372136BB90A309F55804C0856A6FB213C2FB3CB7B58D5DEA5FDFC208673"
                     }
                 ]
-                "direction": "decrypt",
-                "supportsNonceMasking": false
             },
         ]
     }
