--- a/src/ascon/sections/07-ascon-hash256-responses.adoc
+++ b/src/ascon/sections/07-ascon-hash256-responses.adoc
@@ -9,7 +9,7 @@ Each test group contains an array of one or more test cases. Each test case is a
 | JSON Value | Description | JSON type
 
 | tcId | The test case identifier | integer
-| digest | The computed digest | hex
+| md | The computed digest | hex
 |===
 
 The following is an example JSON test vector response object for Ascon / Hash256 / SP800-232.
@@ -32,7 +32,7 @@ The following is an example JSON test vector response object for Ascon / Hash256
                 "tests": [
                     {
                         "tcId": 3,
-                        "digest": "84ADA53484D7D11D7B9518754542E6FC6646D2BEB8346B260EF44880A6974593"
+                        "md": "84ADA53484D7D11D7B9518754542E6FC6646D2BEB8346B260EF44880A6974593"
                     }
                 ]
             }
