Adding small blurb about decrypt fail cases

--- a/src/ascon/sections/04-testtypes.adoc
+++ b/src/ascon/sections/04-testtypes.adoc
@@ -11,7 +11,13 @@ The ACVP server performs a set of tests on the specified Ascon algorithm in orde
 
 * Ascon / AEAD128 / * "AFT" - Algorithm Functional Test. 
 
-For each test case provided the IUT *SHALL* perform either encryption or decryption. In the case of encryption, the IUT *SHALL* use the provided key, nonce, associated data, payload, payload bit length, associated data bit length, tag length, and second key values. The IUT-computed ciphertext and tag are communicated to the ACVP server and compared to the expected ciphertext and tag. This tests the implementation of Algorithm 3 `Ascon-AEAD128.enc()` from <<SP800-232>> Section 4.1.1. The server *SHALL* provide at least 60 tests for each combination of capabilities. In the case of decryption, the IUT *SHALL* use the provided key, nonce, associated data, ciphertext, tag, ciphertext bit length, associated data bit length, tag length, and second key values. The IUT-computed payload is communicated to the ACVP server and compared to the expected payload. This tests the implementation of Algorithm 4 `Ascon-AEAD128.dec()` from <<SP800-232>> Section 4.1.2. The server *SHALL* provide at least 60 tests for each combination of capabilities.
+For each test case provided the IUT *SHALL* perform either encryption or decryption. In the case of encryption, the IUT *SHALL* use the provided key, nonce, associated data, payload, payload bit length, associated data bit length, tag length, and second key values. The IUT-computed ciphertext and tag are communicated to the ACVP server and compared to the expected ciphertext and tag. This tests the implementation of Algorithm 3 `Ascon-AEAD128.enc()` from <<SP800-232>> Section 4.1.1. The server *SHALL* provide at least 60 tests for each combination of capabilities. In the case of decryption, the IUT *SHALL* use the provided key, nonce, associated data, ciphertext, tag, ciphertext bit length, associated data bit length, tag length, and second key values. The IUT-computed payload is communicated to the ACVP server and compared to the expected payload. In some decrypt cases, the server may provide a modified tag value which will cause the server to expect a "failure" response. This tests the implementation of Algorithm 4 `Ascon-AEAD128.dec()` from <<SP800-232>> Section 4.1.2. The server *SHALL* provide at least 60 tests for each combination of capabilities.
+
+The decypt modifcations are:
+
+* "valid input - ciphertext should decrypt successfully" - No modifcations to the inputs are made and decryption will complete successfully.
+
+* "modified tag" - The tag is modified and decryption will fail.
 
 ==== Ascon Hash Test Types
 
