Updates Ascon digestLength to outputLength in registration

--- a/src/ascon/sections/05-ascon-cxof128-capabilities.adoc
+++ b/src/ascon/sections/05-ascon-cxof128-capabilities.adoc
@@ -13,7 +13,7 @@ Each Ascon CXOF128 algorithm capability advertised is a self-contained JSON obje
 | mode | The Ascon mode to be validated | string | "CXOF128"
 | revision | The algorithm testing revision to use | string | "SP800-232"
 | messageLength | The supported message lengths in bits | Domain | {"Min": 0, "Max": 65536, "Inc": any}
-| digestLength | The supported digest lengths in bits | Domain | {"Min": 1, "Max": 65536, "Inc": any}
+| outputLength | The supported digest lengths in bits | Domain | {"Min": 1, "Max": 65536, "Inc": any}
 | customizationStringLength | The supported customization string lengths in bits | Domain | {"Min": 0, "Max": 2048, "Inc": any}
 |===
 
@@ -35,7 +35,7 @@ Below is an example of the registration for Ascon / CXOF128 / SP800-232
       "increment": 1
     }
   ],
-  "digestLength": [
+  "outputLength": [
     {
       "min": 1,
       "max": 65536,
