--- a/src/ascon/sections/05-ascon-xof128-capabilities.adoc
+++ b/src/ascon/sections/05-ascon-xof128-capabilities.adoc
@@ -13,7 +13,7 @@ Each Ascon XOF128 algorithm capability advertised is a self-contained JSON objec
 | mode | The Ascon mode to be validated | string | "XOF128"
 | revision | The algorithm testing revision to use | string | "SP800-232"
 | messageLength | The supported message lengths in bits | Domain | {"Min": 0, "Max": 65536, "Inc": any}
-| digestLength | The supported digest lengths in bits | Domain | {"Min": 1, "Max": 65536, "Inc": any}
+| outputLength | The supported digest lengths in bits | Domain | {"Min": 1, "Max": 65536, "Inc": any}
 |===
 
 [[Ascon_XOF128_capabilities]]
@@ -34,7 +34,7 @@ Below is an example of the registration for Ascon / XOF128 / SP800-232
       "increment": 1
     }
   ],
-  "digestLength": [
+  "outputLength": [
     {
       "min": 1,
       "max": 65536,
