Mark 'keys' as optional

--- a/src/conditioning-components/sections/05-capabilities.adoc
+++ b/src/conditioning-components/sections/05-capabilities.adoc
@@ -20,7 +20,7 @@ The following ConditioningComponent / AES-CBC-MAC / SP800-90B and ConditioningCo
 | mode | The specific conditioning component to be validated | string | "AES-CBC-MAC" or "BlockCipher_DF"
 | revision | The algorithm testing revision to use | string | "SP800-90B"
 | keyLen | The length of keys supported in bits | array | [128, 192, 256]
-| keys | User-defined keys used to generate, AES-CBC-MAC only | array | Must have matching keyLen support
+| keys | This property is *OPTIONAL*. User-defined keys used to generate, AES-CBC-MAC only | array | Must have matching keyLen support
 | payloadLen | The lengths in bits supported by the IUT | domain | [{"min": 8, "max": 65536, "inc": 8}]
 | outputLen | The lengths in bits supported by the IUT as output only for BlockCipher_DF | domain | [{"min": 128, "max": 512, "inc": 8}]
 |===
