--- a/src/kdf/sections/06-test-vectors.adoc
+++ b/src/kdf/sections/06-test-vectors.adoc
@@ -10,7 +10,7 @@ The testGroups element at the top level in the test vector JSON object is an arr
 
 | tgId | Test group identifier | integer
 | kdfMode | The kdfMode used for the test group | string
-| macMode | Psuedorandom function (PRF) HMAC, CMAC, or KMAC used | string
+| macMode | Pseudorandom function (PRF) HMAC, CMAC, or KMAC used | string
 | counterLocation | "none", "after fixed data", "before fixed data", "middle fixed data", or "before iterator"| string
 | keyOutLength | Expected length of the derived keying material or key in bits | integer
 | counterLength | Expected length of the counter in bits | integer
@@ -28,7 +28,7 @@ For "KDF" / "KMAC" / "Sp800-108r1" the following table describes the JSON elemen
 | JSON Values | Description | JSON Type
 
 | tgId | Test group identifier | integer
-| macMode | Psuedorandom function (PRF) KMAC used | string
+| macMode | Pseudorandom function (PRF) KMAC used | string
 | testType | Describes the operation being performed | string 
 | tests | Array of individual test cases | array
 |===
