--- a/src/fn-dsa/sections/05-fn-dsa-keygen-capabilities.adoc
+++ b/src/fn-dsa/sections/05-fn-dsa-keygen-capabilities.adoc
@@ -28,7 +28,7 @@ Below is an example of the registration for FN-DSA / keyGen / FIPS206
     "revision": "FIPS206",
     "prereqVals": [
         {
-            "algorithm": "SHA --------------- IS THIS SUPPOSED TO BE DIFFERENT THAN SHAKE?",
+            "algorithm": "SHAKE256",
             "valValue": "123456"
         }
     ],
