--- a/src/fn-dsa/sections/05-fn-dsa-sigver-capabilities.adoc
+++ b/src/fn-dsa/sections/05-fn-dsa-sigver-capabilities.adoc
@@ -44,7 +44,7 @@ Below is an example of the registration for FN-DSA / sigVer / FIPS206
   "revision": "FIPS206",
   "prereqVals": [
     {
-      "algorithm": "SHA",
+      "algorithm": "SHAKE256",
       "valValue": "123456"
     }
   ],
