--- a/src/ml-kem/sections/05-ml-kem-keygen-capabilities.adoc
+++ b/src/ml-kem/sections/05-ml-kem-keygen-capabilities.adoc
@@ -12,8 +12,20 @@ Below is an example of the registration for ML-KEM / keyGen / FIPS203
     "revision": "FIPS203",
     "prereqVals": [
         {
-            "algorithm": "SHA",
+            "algorithm": "SHA3-256",
             "valValue": "123456"
+        },
+        {
+            "algorithm": "SHA3-512",
+            "valValue": "123456"
+        },
+        {
+            "algorithm": "SHAKE128",
+            "valValue": "123456"
+        },
+        {
+            "algorithm": "SHAKE256",
+            "valValue": "654321"
         }
     ],
     "parameterSets": ["ML-KEM-512", "ML-KEM-768", "ML-KEM-1024"]
