--- a/src/fn-dsa/sections/05-fn-dsa-siggen-capabilities.adoc
+++ b/src/fn-dsa/sections/05-fn-dsa-siggen-capabilities.adoc
@@ -45,7 +45,7 @@ Below is an example of the registration for FN-DSA / sigGen / FIPS206
   "revision": "FIPS206",
   "prereqVals": [
     {
-      "algorithm": "SHA",
+      "algorithm": "SHAKE256",
       "valValue": "123456"
     }
   ],
