--- a/src/ml-dsa/sections/05-ml-dsa-keygen-capabilities.adoc
+++ b/src/ml-dsa/sections/05-ml-dsa-keygen-capabilities.adoc
@@ -28,8 +28,12 @@ Below is an example of the registration for ML-DSA / keyGen / FIPS204
     "revision": "FIPS204",
     "prereqVals": [
         {
-            "algorithm": "SHA",
+            "algorithm": "SHAKE128",
             "valValue": "123456"
+        },
+        {
+            "algorithm": "SHAKE256",
+            "valValue": "654321"
         }
     ],
     "parameterSets": ["ML-DSA-44", "ML-DSA-65", "ML-DSA-87"]
