--- a/src/ml-dsa/sections/05-ml-dsa-sigver-capabilities.adoc
+++ b/src/ml-dsa/sections/05-ml-dsa-sigver-capabilities.adoc
@@ -43,10 +43,14 @@ Below is an example of the registration for ML-DSA / sigVer / FIPS204
   "mode": "sigVer",
   "revision": "FIPS204",
   "prereqVals": [
-    {
-      "algorithm": "SHA",
-      "valValue": "123456"
-    }
+      {
+          "algorithm": "SHAKE128",
+          "valValue": "123456"
+      },
+      {
+          "algorithm": "SHAKE256",
+          "valValue": "654321"
+      }
   ],
   "capabilities": [
     {
