Updated ad variable names

--- a/src/ascon/sections/06-ascon-aead128-test-vectors.adoc
+++ b/src/ascon/sections/06-ascon-aead128-test-vectors.adoc
@@ -33,12 +33,12 @@ Each test group contains an array of one or more test cases. Each test case is a
 | tcId | Numeric identifier for the test case, unique across the entire vector set | integer
 | key | Key value | hex
 | nonce | Nonce value | hex
-| aad | Associated data value | hex
+| ad | Associated data value | hex
 | tag | Tag in the decrypt case | hex
 | pt | Payload in the encrypt case | hex
 | ct | Payload in the decrypt case | hex
 | payloadLen | Payload bit length | integer
-| aadLen | Assoicated data bit length | integer
+| adLen | Assoicated data bit length | integer
 | tagLen | Tag bit length | integer
 | secondKey | Second key value | hex
 |===
@@ -68,10 +68,10 @@ The following is an example JSON object sent from the server to the client for A
                         "tcId": 60,
                         "key": "FD49918ED109AF4237047633E899B574",
                         "nonce": "B6B6598FFA6317E896945E69FBC05591",
-                        "aad": "47E62206F92A652B",
+                        "ad": "47E62206F92A652B",
                         "pt": "F2C255",
                         "payloadLen": 23,
-                        "aadLen": 64,
+                        "adLen": 64,
                         "tagLeng": 64,
                         "secondKey": "016FBC19B1FAF20FBC6C051B6B8543A7"
                     }
@@ -87,10 +87,10 @@ The following is an example JSON object sent from the server to the client for A
                         "tcId": 107,
                         "key": "66D31B340B8B4D8C82CDF4C1B76DC4A6",
                         "nonce": "51224C04CC0D79B992826F3478DF6C95",
-                        "aad": "63BEEE9E4B971FEFABEAEBBADBF512194EB04E0E",
+                        "ad": "63BEEE9E4B971FEFABEAEBBADBF512194EB04E0E",
                         "pt": "9596D2",
                         "payloadLen": 24,
-                        "aadLen": 160,
+                        "adLen": 160,
                         "tagLen": 64
                     }
                 ]
@@ -105,10 +105,10 @@ The following is an example JSON object sent from the server to the client for A
                         "tcId": 125,
                         "key": "F381BF2A2CCC344C07E30DB6D93C43A5",
                         "nonce": "538AB0C0748FA21B4841329C640E5B8C",
-                        "aad": "6421B70D86E8CA3D80C0708F72C840717BAB0D4900",
+                        "ad": "6421B70D86E8CA3D80C0708F72C840717BAB0D4900",
                         "tag": "EB8DDC8F7B32334D",
                         "payloadLen": 63,
-                        "aadLen": 161,
+                        "adLen": 161,
                         "tagLen": 64,
                         "secondKey": "89ADE7BE07136C740708C8F10CF58970",
                         "ct": "EA2649C1EDEA2F4A"
@@ -125,10 +125,10 @@ The following is an example JSON object sent from the server to the client for A
                         "tcId": 184,
                         "key": "E37C0BB570A0F742C72E0F26C2A72BDD",
                         "nonce": "49F8A80BCCCA888D053F41EE35842A78",
-                        "aad": "55D138A7B7A84454D7217121446BA4AF1050B988",
+                        "ad": "55D138A7B7A84454D7217121446BA4AF1050B988",
                         "tag": "6497C727EC4CBF8F",
                         "payloadLen": 383,
-                        "aadLen": 160,
+                        "adLen": 160,
                         "tagLen": 64,
                         "ct": "C20807710C919109AC1618D872ABCD1D8D2B3372136BB90A309F55804C0856A6FB213C2FB3CB7B58D5DEA5FDFC208673"
                     }
