corrects vendor addresses property description

--- a/src/protocol/sections/11-messaging.adoc
+++ b/src/protocol/sections/11-messaging.adoc
@@ -395,7 +395,7 @@ The available properties for vendor resources are:
 ** *number* - `string`
 ** *type* - `string`, one of (fax, voice)
 * *contactsUrl* - `string`, identifier for the list of person resources associated with this vendor
-* *addresses* - an address object,
+* *addresses* - an array of address objects,
 ** *url* - `string`, identifier for the address resource
 ** *street1* - `string`
 ** *street2* - `string`
