--- a/src/symmetric/sections/05-capabilities.adoc
+++ b/src/symmetric/sections/05-capabilities.adoc
@@ -137,7 +137,7 @@ NOTE: The ivGenMode property is used for AES-GCM/AES-XPN algorithms to document 
 
 NOTE: For AES-CCM-ECMA, the IV/NONCE is used to create a pre-formatted "B_0 block" containing 16-bytes as defined by Fig 113 in ECMA-368 Sec 18.5.
 
-NOTE: The ivLen for AES-CCM-ECMA should always be 104-bits.
+NOTE: The ivLen for AES-CCM-ECMA *SHALL* be 104-bits.
 
 The following grid outlines which properties are *REQUIRED*, as well as the possible values a server *MAY* support for the XTS block cipher algorithm:
 
