Added some clarity to the Right-most-output-bits, and fixed misspellings of interpreted. Based on feedback from gh1581.

--- a/src/xof/sections/04-testtypes.adoc
+++ b/src/xof/sections/04-testtypes.adoc
@@ -51,7 +51,7 @@ MCT(Msg, MaxOutLen, MinOutLen, OutLenIncrement)
 }
 ----
 
-NOTE: For the "Rightmost_Output_bits % Range" operation, the Rightmost_Output_bits bit string should be interpretted as a little endian-encoded number. 
+NOTE: For the "Rightmost_Output_bits % Range" operation, the Rightmost_Output_bits bit string should be interpreted as a little endian-encoded number, where the first 8-bits are the most-siginicant byte.
 
 [[ParallelHash-MCT]]
 ==== ParallelHash Monte Carlo Test
@@ -89,7 +89,7 @@ MCT(Msg, MaxOutLen, MinOutLen, OutLenIncrement, MaxBlockSize, MinBlockSize)
 }
 ----
 
-NOTE: For the "Rightmost_Output_bits % Range" operation, the Rightmost_Output_bits bit string should be interpretted as a little endian-encoded number. For "Right(Rightmost_Output_bits, 8) % BlockRange", the bit string resulting from the "Right(Rightmost_Output_bits, 8)" operation should be interpretted as a little endian-encoded number.
+NOTE: For the "Rightmost_Output_bits % Range" operation, the Rightmost_Output_bits bit string should be interpreted as a little endian-encoded number, where the first 8-bits are the most-siginicant byte. For "Right(Rightmost_Output_bits, 8) % BlockRange", the bit string resulting from the "Right(Rightmost_Output_bits, 8)" operation should be interpreted as a little endian-encoded number.
 
 [[TupleHash-MCT]]
 ==== TupleHash Monte Carlo Test
@@ -129,7 +129,7 @@ MCT(Tuple, MaxOutLen, MinOutLen, OutLenIncrement)
 }
 ----
 
-NOTE: For "Left(workingBits, 3) % 4", the bit string resulting from the "Left(workingBits, 3)" operation should be interpretted as a little endian-encoded number. For the "Rightmost_Output_bits % Range" operation, the Rightmost_Output_bits bit string should be interpretted as a little endian-encoded number.
+NOTE: For "Left(workingBits, 3) % 4", the bit string resulting from the "Left(workingBits, 3)" operation should be interpreted as a little endian-encoded number. For the "Rightmost_Output_bits % Range" operation, the Rightmost_Output_bits bit string should be interpreted as a little endian-encoded number, where the first 8-bits are the most-siginicant byte.
 
 [xof-mct-functions]
 ==== Functions Used in the Monte Carlo Tests for XOFs
