Removed contact references for Russ, as he's no longer a contact. Added Ben and myself as contributors to keep it current.

--- a/src/draft-fussell-acvp-mac.adoc
+++ b/src/draft-fussell-acvp-mac.adoc
@@ -18,16 +18,16 @@
 :country: United States of America
 :email: bfussell@cisco.com
 :role: editor
-:initials_2: R.H.
-:lastname_2: Hammett
-:fullname_2: Russell Hammett
-:organization_2: G2, Inc.
-:street_2: 302 Sentinel Drive, Suite #300
-:city_2: Annapolis Junction
-:code_2: 20701
-:country_2: United States of America
-:email_2: russ.hammett@g2-inc.com
-:role_2: editor
+:forename_initials: C.C.
+:lastname: Celi
+:fullname: Christopher Celi
+:organization: National Institute of Standards and Technology
+:street: 100 Bureau Drive
+:city: Gaithersburg
+:code: 20899
+:country: United States of America
+:email: christopher.celi@nist.gov
+:role: editor
 :mn-document-class: ietf
 :mn-output-extensions: xml,rfc,txt,html
 :area: General
