--- a/src/draft-hammett-acvp-kas-kc-sp800-56.adoc
+++ b/src/draft-hammett-acvp-kas-kc-sp800-56.adoc
@@ -10,15 +10,15 @@
 :area: Internet
 :intended-series: informational
 :revdate: 2021-07-22
-:forename_initials: R.H.
-:lastname: Hammett
-:fullname: Russell Hammett
-:organization: HII TSD
-:street: 302 Sentinel Drive, Suite #300
-:city: Annapolis Junction
-:code: 20701
+:forename_initials: C.C.
+:lastname: Celi
+:fullname: Christopher Celi
+:organization: National Institute of Standards and Technology
+:street: 100 Bureau Drive
+:city: Gaithersburg
+:code: 20899
 :country: United States of America
-:email: russ.hammett@hii-tsd.com
+:email: christopher.celi@nist.gov
 :role: editor
 :mn-document-class: ietf
 :mn-output-extensions: xml,rfc,txt,html
