--- a/src/draft-hammett-acvp-kas-ssc-ecc.adoc
+++ b/src/draft-hammett-acvp-kas-ssc-ecc.adoc
@@ -9,14 +9,15 @@
 :intended-series: informational
 :revdate: 2020-06-26
 :forename_initials: R.H.
-:lastname: Hammett
-:fullname: Russell Hammett
-:organization: HII
-:street: 302 Sentinel Dr #300
-:city: Annapolis Junction
-:code: 20701
+:forename_initials: C.C.
+:lastname: Celi
+:fullname: Christopher Celi
+:organization: National Institute of Standards and Technology
+:street: 100 Bureau Drive
+:city: Gaithersburg
+:code: 20899
 :country: United States of America
-:email: russell.hammett@nist.gov
+:email: christopher.celi@nist.gov
 :role: editor
 :docfile: draft-hammett-acvp-kas-ssc-ecc.adoc
 :mn-document-class: ietf
