--- a/src/protocol/sections/19-contributors.adoc
+++ b/src/protocol/sections/19-contributors.adoc
@@ -2,4 +2,4 @@
 [[CONTRIBUTORS]]
 == Contributors
 
-Original ACV Protocol created by David McGrew, Bill Hudson and Anthony Grieco of Cisco Systems. Additional contributions made by Sam Farthing, Ellie Daw and Philip Perricone from Cisco Systems and Christopher Celi and Russell Hammett from NIST. 
+Original ACV Protocol created by David McGrew, Bill Hudson and Anthony Grieco of Cisco Systems. Additional contributions made by Sam Farthing, Ellie Daw, and Philip Perricone from Cisco Systems and Christopher Celi, Russell Hammett, Ben Livelsberger, and Joel Brockman from NIST. 
