Fixes build issue, removed accidentally.

--- a/src/draft-celi-acvp-symmetric.adoc
+++ b/src/draft-celi-acvp-symmetric.adoc
@@ -20,6 +20,8 @@
 :country: United States of America
 :email: christopher.celi@nist.gov
 :role: editor
+:mn-document-class: ietf
+:mn-output-extensions: xml,rfc,txt,html
 
 :area: General
 :keyword: acvp, crypto
