Added support for SHAKE-128/256 FIPS202. The changes are no longer supported the inBit, inEmpty, and outBit, and support for custom messageLength was added.

--- a/src/sha3/sections/03-supported.adoc
+++ b/src/sha3/sections/03-supported.adoc
@@ -14,5 +14,7 @@ The following SHA3-based hash algorithms *MAY* be advertised by this ACVP compli
 * SHA3-512 / null / 2.0
 * SHAKE-128 / null / 1.0
 * SHAKE-256 / null / 1.0
+* SHAKE-128 / null / FIPS202
+* SHAKE-256 / null / FIPS202
 
 Other hash algorithms *MAY* be advertised by the ACVP module elsewhere.
