--- a/src/sha3/sections/05-capabilities.adoc
+++ b/src/sha3/sections/05-capabilities.adoc
@@ -44,7 +44,11 @@ The following grid outlines which properties are *REQUIRED*, as well as all the 
 | SHA3-512| 2.0 | | | | | {"Min": 0, "Max": 65536, "Inc": any} | [1, 2, 4, 8]
 | SHAKE-128| 1.0 | true, false| true, false| {"Min": 16, "Max": 65536, "Inc": any}| true, false | |
 | SHAKE-256| 1.0 | true, false| true, false| {"Min": 16, "Max": 65536, "Inc": any}| true, false | |
+| SHAKE-128| FIPS202 | | | {"Min": 16, "Max": 65536, "Inc": any}| | {"Min": 0, "Max": 65536, "Inc": 8} |
+| SHAKE-256| FIPS202 | | | {"Min": 16, "Max": 65536, "Inc": any}| | {"Min": 10, "Max": 65536, "Inc": 8} |
 |===
+
+NOTE: For SHAKE FIPS202 - inBit, inEmpty, and outBit support were removed, while support for custom MessageLengths was added.
 
 The following is a example JSON object advertising support for SHA3-256 for testing revision 1.0.
 
@@ -60,18 +64,21 @@ The following is a example JSON object advertising support for SHA3-256 for test
 }
 ----
 
-The following is an example JSON object advertising support for SHAKE-128.
+The following is an example JSON object advertising support for SHAKE-128 FIPS202.
 
 [source, json]
 ----
 {
     "algorithm": "SHAKE-128",
-    "revision": "1.0",
+    "revision": "FIPS202",
     "mode": null,
-    "inBit": true,
-    "inEmpty": true,
-    "outBit": true,
     "outputLen": [
+        {
+        "min": 16,
+        "max": 1024
+        }
+    ],
+    "messageLength": [
         {
         "min": 16,
         "max": 1024
