--- a/src/sha3/sections/06-test-vectors.adoc
+++ b/src/sha3/sections/06-test-vectors.adoc
@@ -38,7 +38,7 @@ Each test group *SHALL* contain an array of one or more test cases.  Each test c
 | largeMsg | Object describing the message for an LDT group | large data object, see <<LD_test>> for more information
 |===
 
-NOTE: The maximum value for SHAKE-128 for 'len' is 65,904 bits when the inBit parameter is set to true in the capabilities registration and 66,240 bits when it is set to false. The maximum value for SHAKE-256 for 'len' is 66,428 bits when the inBit parameter is set to true in the capabilities registration and 65,752 bits when it is set to false.
+NOTE: The maximum value for SHAKE-128 v1.0 for 'len' is 65,904 bits when the inBit parameter is set to true in the capabilities registration and 66,240 bits when it is set to false. The maximum value for SHAKE-256 v1.0 for 'len' is 66,428 bits when the inBit parameter is set to true in the capabilities registration and 65,752 bits when it is set to false.
 
 The following are example JSON objects for secure hash test vectors sent from the ACVP server to the crypto module. Notice that the single bit message is represented as "01". This complies with the little-endian nature of SHA3. All hex displayed is little-endian bit order when associated with SHA3 or any of its variations.
 
@@ -97,7 +97,7 @@ The following are example JSON objects for secure hash test vectors sent from th
 ]
 ----
 
-The following is an example JSON object for SHAKE.
+The following is an example JSON object for SHAKE v1.0.
 
 [source, json]
 ----
