--- a/src/sha3/sections/07-responses.adoc
+++ b/src/sha3/sections/07-responses.adoc
@@ -143,7 +143,7 @@ The following are examples of JSON objects for secure hash test results sent fro
 }
 ----
 
-The following is an example JSON object response for SHAKE-128. The group identified by tgId 1 is a group of AFTs. The group identified by tgId 2 is a group of MCTs. The group identified by tgId 3 is a group of VOTs.
+The following is an example JSON object response for SHAKE-128 v1.0. The group identified by tgId 1 is a group of AFTs. The group identified by tgId 2 is a group of MCTs. The group identified by tgId 3 is a group of VOTs.
 
 [source, json]
 ----
