Just a blurb about MCT tests an FIPS202 revision not being supported.

--- a/src/sha3/sections/04-testtypes.adoc
+++ b/src/sha3/sections/04-testtypes.adoc
@@ -65,6 +65,8 @@ The MCTs start with an initial condition (SEED which is a single message) and pe
 
 The SHAKE function used in the pseudocode takes in a bitstring and a desired output length in bits. The MSG[i] input to SHAKE MUST always contain at least 128 bits. If this is not the case as the previous digest was too short, append empty bits to the rightmost side of the digest. The MCT algorithm is shown below.
 
+NOTE: SHAKE FIPS202 revisions do not support MCT.
+
 .SHAKE Monte Carlo Test
 [source, code]
 ----
