moves FIPS202 MCT note to top of section

--- a/src/sha3/sections/04-testtypes.adoc
+++ b/src/sha3/sections/04-testtypes.adoc
@@ -57,6 +57,7 @@ For 100 iterations
 
 [[SHAKE-MCT]]
 ==== SHAKE Monte Carlo Test
+NOTE: The SHAKE "FIPS202" testing revision does not support MCT.
 
 The MCTs start with an initial condition (SEED which is a single message) and perform a series of chained computations. Some values used in the algorithm are based on properties provided during the registration. They are as follows.
 
@@ -64,8 +65,6 @@ The MCTs start with an initial condition (SEED which is a single message) and pe
 * maxOutBytes = largest number of bytes supported
 
 The SHAKE function used in the pseudocode takes in a bitstring and a desired output length in bits. The MSG[i] input to SHAKE MUST always contain at least 128 bits. If this is not the case as the previous digest was too short, append empty bits to the rightmost side of the digest. The MCT algorithm is shown below.
-
-NOTE: SHAKE FIPS202 revisions do not support MCT.
 
 .SHAKE Monte Carlo Test
 [source, code]
