Updated documentation to show both SHAKE 1.0 and FIPS202 versions instead of a mix.

--- a/src/sha3/sections/05-capabilities.adoc
+++ b/src/sha3/sections/05-capabilities.adoc
@@ -48,7 +48,7 @@ The following grid outlines which properties are *REQUIRED*, as well as all the 
 | SHAKE-256| FIPS202 | | | {"Min": 16, "Max": 65536, "Inc": any}| | {"Min": 0, "Max": 65536, "Inc": 8} |
 |===
 
-The following is a example JSON object advertising support for SHA3-256 for testing revision 1.0.
+The following is a example JSON object advertising support for SHA3-256 for testing revision v1.0.
 
 [source, json]
 ----
@@ -59,6 +59,26 @@ The following is a example JSON object advertising support for SHA3-256 for test
     "inBit": true,
     "inEmpty": true,
     "performLargeDataTest": [1, 2, 4, 8]
+}
+----
+
+The following is an example JSON object advertising support for SHAKE-128 v1.0.
+
+[source, json]
+----
+{
+    "algorithm": "SHAKE-128",
+    "revision": "1.0",
+    "mode": null,
+    "inBit": true,
+    "inEmpty": true,
+    "outBit": true,
+    "outputLen": [
+        {
+        "min": 16,
+        "max": 1024
+        }
+    ]
 }
 ----
 
