--- a/src/sha3/sections/06-test-vectors.adoc
+++ b/src/sha3/sections/06-test-vectors.adoc
@@ -97,7 +97,7 @@ The following are example JSON objects for secure hash test vectors sent from th
 ]
 ----
 
-The following is an example JSON object for SHAKE v1.0.
+The following is an example JSON object for SHAKE-128 v1.0.
 
 [source, json]
 ----
@@ -156,5 +156,45 @@ The following is an example JSON object for SHAKE v1.0.
             }]
         }]
     }
+]
+----
+
+The following is an example JSON object for SHAKE-128 FIPS202.
+
+[source, json]
+----
+[
+  { "acvVersion": <acvp-version> },
+  {
+    "vsId": 12345,
+    "algorithm": "SHAKE-128",
+    "revision": "FIPS202",
+    "testGroups": [
+      {
+        "tgId": 1,
+        "testType": "AFT",
+        "tests": [
+          {
+            "tcId": 1,
+            "msg": "3D955AA590240623A3BFCA54D8...",
+            "len": 31352,
+            "outLen": 504
+          },
+          {
+            "tcId": 2,
+            "msg": "AD2E9023C60D916A51DD73E75D...",
+            "len": 208,
+            "outLen": 360
+          },
+          {
+            "tcId": 3,
+            "msg": "418130A5678E5D1773...",
+            "len": 1104,
+            "outLen": 408
+          }
+        ]
+      }
+    ]
+  }
 ]
 ----
