--- a/src/sha3/sections/07-responses.adoc
+++ b/src/sha3/sections/07-responses.adoc
@@ -35,7 +35,7 @@ The following table describes the JSON elements for each test case object.
 
 | tcId| Numeric identifier for the test case, unique across the entire vector set.| integer
 | md| The IUT's digest response to a VOT, AFT or LDT| string (hex)
-| resultsArray| Array of JSON objects that represent each iteration of a Monte Carlo Test. Each iteration will contain the msg and md (and outLen for SHAKE-128 and SHAKE-256)| array of objects containing the md (and potentially outLen)
+| resultsArray| Array of JSON objects that represent each iteration of a Monte Carlo Test. Each iteration will contain the msg and md (and outLen for SHAKE-128 v1.0 and SHAKE-256 v1.0)| array of objects containing the md (and potentially outLen)
 |===
 
 NOTE: The 'tcId' *MUST* be included in every test case object sent between the client and the server.
@@ -148,7 +148,7 @@ The following is an example JSON object response for SHAKE-128 v1.0. The group i
 [source, json]
 ----
 {
-    "vsId": 0,
+    "vsId": 12345,
     "algorithm": "SHAKE-128",
     "revision": "1.0",
     "testGroups": [
@@ -199,3 +199,38 @@ The following is an example JSON object response for SHAKE-128 v1.0. The group i
     ]
 }
 ----
+
+The following is an example JSON object response for SHAKE-128 FIPS202. The group identified by tgId 1 is a group of AFTs.
+
+[source, json]
+----
+{
+  "vsId": 12345,
+  "algorithm": "SHAKE-128",
+  "revision": "FIPS202",
+  "testGroups": [
+    {
+      "tgId": 1,
+      "tests": [
+            {
+            "tcId": 1,
+            "md": "1991649A5A7766AC93F2C665186C..."
+            },
+            {
+            "tcId": 2,
+            "md": "32C4F0A828FE7704B37FD92EBD34..."
+            },
+            {
+            "tcId": 3,
+            "md": "0386A3F546FC3DD4958D0B1..."
+            },
+            {
+            "tcId": 4,
+            "md": "0942D03460462EFC1A5F0A229D1..."
+            }
+        ]
+    }
+  ]
+}
+----
+
