--- a/src/common/common-sections/01-intro.adoc
+++ b/src/common/common-sections/01-intro.adoc
@@ -4,4 +4,4 @@
 
 The Automated Crypto Validation Protocol (ACVP) defines a mechanism to automatically verify the cryptographic implementation of a software or hardware crypto module. The ACVP specification defines how a crypto module communicates with an ACVP server, including crypto capabilities negotiation, session management, authentication, vector processing and more. The ACVP specification does not define algorithm specific JSON constructs for performing the crypto validation. A series of ACVP sub-specifications define the constructs for testing individual crypto algorithms. Each sub-specification addresses a specific class of crypto algorithms. This sub-specification defines the JSON constructs for testing {spec-algorithm} implementations using ACVP.
 
-This document is a work-product of the NIST Cryptographic Algorithm Validation Program (CAVP). Please communicate questions and feedback concerning this document to the CAVP by opening an issue on the usnistgov/ACVP GitHub repository at https://github.com/usnistgov/ACVP/issues.
+This document is a work-product of the https://www.nist.gov/[NIST] https://csrc.nist.gov/projects/cryptographic-algorithm-validation-program[Cryptographic Algorithm Validation Program] (CAVP). Please communicate questions and feedback concerning this document to the CAVP by opening an issue on the usnistgov/ACVP GitHub repository at https://github.com/usnistgov/ACVP/issues.
