--- a/src/kas/sp800-56ar3/ecc/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56ar3/ecc/sections/05-capabilities.adoc
@@ -15,7 +15,7 @@ Some algorithm implementations rely on other cryptographic primitives. For examp
 | prereqAlgVal| prerequistie algorithm validation| object with algorithm and valValue properties| see above| Yes
 |===
 
-Required prerequisite algorithms for KAS can be found here: https://csrc.nist.gov/Projects/cryptographic-algorithm-validation-program/prerequisites.
+Required prerequisite algorithms for KAS can be found at https://csrc.nist.gov/Projects/cryptographic-algorithm-validation-program/prerequisites.
 
 [[cap_ex]]
 === Algorithm Capabilities JSON Values
