--- a/src/kas/sp800-56ar3/ssc/ecc/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56ar3/ssc/ecc/sections/05-capabilities.adoc
@@ -1,6 +1,6 @@
 
 [[prereq_algs]]
-=== Prerequisite Algorithms for KAS FFC Validations
+=== Required Prerequisite Algorithms for KAS FFC Validations
 
 Some algorithm implementations rely on other cryptographic primitives. For example, IKEv2 uses an underlying SHA algorithm. Each of these underlying algorithm primitives must be validated, either separately or as part of the same 	submission. ACVP provides a mechanism for specifying the required prerequisites:
 
@@ -15,18 +15,7 @@ Some algorithm implementations rely on other cryptographic primitives. For examp
 | prereqAlgVal| prerequisite algorithm validation| object with algorithm and valValue properties| see above| Yes
 |===
 
-KAS has conditional prerequisite algorithms, depending on the capabilities registered:
-
-[[prereqs_requirements_table]]
-
-.Prerequisite requirement conditions
-|===
-| Prerequisite Algorithm| Condition
-
-| DRBG | Always *REQUIRED*
-| SHA | Always *REQUIRED*
-| ECDSA | ECDSA KeyGen/KeyVer validation *REQUIRED* when IUT makes use of the generation/validation of keys within the module boundary.|===
-|===
+Required prerequisite algorithms for KAS-SSC can be found at https://csrc.nist.gov/Projects/cryptographic-algorithm-validation-program/prerequisites.
 
 [#properties]
 === Property Registration
